--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "alias": "tsc-alias -p tsconfig.json",
     "lib:watch": "tsc -w & tsc-alias -w",
     "replace": "node -r tsconfig-paths/register -r ts-node/register ./lib/base/array/ArrayComponent.js",
-    "test:debug": "mocha -r ts-node/register -r tsconfig-paths/register -r mock-local-storage -r jsdom-global/register --debug-brk --inspect '**/*.spec.ts'",
+    "test:debug": "mocha -r ts-node/register -r tsconfig-paths/register -r mock-local-storage -r jsdom-global/register --debug-brk --inspect 'src/**/__tests__/*.test.ts'",
     "docs": "./node_modules/typedoc/bin/typedoc --exclude '*.spec.ts' src/*.ts src/**/*.ts src/**/**/*.ts",
     "build:dev": "npx webpack --config config/webpack.config.js",
     "build:prod": "npx webpack --config config/webpack.prod.js",
     "clean": "rm -rf lib && rm -rf dist && rm -rf docs",
-    "build": "yarn clean && gulp templates && yarn docs && yarn lib && yarn alias && yarn build:dev && yarn build:prod",
-    "prepublish": "yarn lint && yarn format && yarn build && yarn test",
+    "build": "pnpm clean && gulp templates && pnpm docs && pnpm lib && pnpm alias pnpm build:dev && pnpm build:prod",
+    "prepublish": "pnpm lint && pnpm format && pnpm build && pnpm test",
     "show-coverage": "open coverage/lcov-report/index.html",
     "lint": "eslint src",
-    "format": "prettier --write .",
-    "prepare": "husky"
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -76,6 +75,7 @@
     "eslint": "^9.12.0",
     "eslint-plugin-mocha": "^10.5.0",
     "fetch-mock": "^9.11.0",
+    "flatpickr": "^4.6.13",
     "globals": "^15.11.0",
     "gulp": "^5.0.0",
     "gulp-insert": "^0.5.0",
@@ -98,8 +98,9 @@
     "tsconfig-paths": "^4.1.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typedoc": "^0.25.13",
-    "typescript": "^5.4.5",
+    "typescript": "5.7.3",
     "typescript-eslint": "^8.8.1",
+    "vitest": "^3.0.9",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
@@ -137,5 +138,9 @@
   "lint-staged": {
     "src/**/*.{js,mjs,cjs,ts}": "eslint --fix",
     "*.{js,mjs,cjs,ts,css,md}": "prettier --write"
+  },
+  "ossRepo": {
+    "repo": "git@github.com:johnformio/core.git",
+    "srcPath": "."
   }
 }
